--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -16,7 +16,7 @@ keepalive_interval: 120       # 保持连接信号的频率，单位秒
                              # 控制连接健康监控
 
 referral_codes:              # 推荐码列表，用于追踪和奖励
-  - ""                       # 按需添加多个代码，每行一个
+  - "j0dfnp7u"                       # 按需添加多个代码，每行一个
 
 # ======================
 # 重定向配置
